# cuopt-ev-routing-backend

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/rules/: backend.md  ci-checks.md  security.md  testing.md
.claude/skills/build-containers/: SKILL.md
.claude/skills/coverage/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/github/: SKILL.md
.claude/skills/integration-test/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/security-scan/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_instance_settings.py
docs/: api-reference.md  architecture.md  configuration.md
scripts/: check_license_headers.py
src/cuopt_ev_routing_backend/: __init__.py  auth.py  config.py  database.py  jwks.py  main.py  models.py
src/cuopt_ev_routing_backend/api/: __init__.py
src/cuopt_ev_routing_backend/api/routes/: __init__.py  admin.py  config.py  cuopt.py  genai.py  weather.py
src/cuopt_ev_routing_backend/schemas/: __init__.py  admin.py  genai.py
src/cuopt_ev_routing_backend/services/: __init__.py  _client.py  cuopt.py  genai.py  instance_settings.py  weather.py
tests/: _auth_helpers.py  conftest.py  test_admin_routes.py  test_auth.py  test_config_route.py  test_cuopt_route.py  test_cuopt_route_scopes.py  test_federation_readiness.py  test_genai_route.py  test_health.py  test_instance_settings_fallback.py  test_internal_client.py  test_jwks.py  test_main_safety.py  test_openapi_smoke.py  test_principal.py  test_require_principal_type.py  test_require_scope.py  test_weather_route.py
tests/integration/: conftest.py  test_int_health.py
