[project]
name = "cuopt-ev-routing-backend"
version = "0.1.0"
description = "cuOpt EV routing backend service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "httpx>=0.28.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "pyjwt[crypto]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.9.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "S"]
ignore = ["B008"]  # FastAPI Depends() pattern

[tool.ruff.lint.per-file-ignores]
# Tests use assert (S101); test fixtures intentionally hardcode JWT test secrets
# (S105 vars, S106 kw-args) — these are not real credentials.
"tests/**" = ["S101", "S105", "S106"]
# Mock weather generator uses random.random()/randint() to fabricate non-cryptographic
# demo data. S311 doesn't apply.
"src/cuopt_ev_routing_backend/services/weather.py" = ["S311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: integration tests (set RUN_INTEGRATION_TESTS=1 to run)",
]

[tool.coverage.run]
source = ["cuopt_ev_routing_backend"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
